--- a/FaPA/GUI/Design/Templates/Anagrafica.xaml
+++ b/FaPA/GUI/Design/Templates/Anagrafica.xaml
@@ -41,6 +41,7 @@
             <StackPanel  Margin="2,0,2,0">
                 <TextBlock Text="Codice fiscale" />
                 <TextBox   Text="{Binding CurrentEntity.CodiceFiscale, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" 
+                           x:Name="CodFiscale"
                            MaxLength="28"
                            HorizontalAlignment="Stretch"/>
             </StackPanel>
