--- a/FaPA/GUI/Design/Templates/CrudFattura.xaml
+++ b/FaPA/GUI/Design/Templates/CrudFattura.xaml
@@ -7,23 +7,25 @@
              xmlns:myRecordNavigator="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" >
-    
+
     <StackPanel Orientation="Vertical" Height="Auto"  Margin="2,2,2,2" 
                 utils:FocusAdvancement.AdvancesByEnterKey="True">
 
         <StackPanel.InputBindings>
             <KeyBinding Key="Enter" Modifiers="Ctrl" Command="{Binding EnterKey}" />
-
-
             <KeyBinding Key="Add"  Modifiers="Ctrl" Command="{Binding AddCopy}" />
-
-            <!--
-                            Command="{Binding RelativeSource={RelativeSource FindAncestor, 
-                                              AncestorType={x:Type Window}},
-                                              Path=Presenter.SearchOnSite}"             
-            -->
-
+            <KeyBinding Key="P" Modifiers="Ctrl"  Command="{Binding Path=Presenter.Search, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" />
             <KeyBinding Key="F9" Command="{Binding SearchOnSite}" />
+            <KeyBinding Key="F9" Command="{Binding SearchOnSite}" />
+            <KeyBinding Key="F6" Command="{Binding DeleteEntityCommand}" />
+            <KeyBinding Key="F10" Command="{Binding SaveEntity}" />
+            <KeyBinding Key="F11" Command="{Binding AddNewEntity}" />
+            <KeyBinding Key="F11"  Command="{Binding PerformCancel}" />
+
+            <KeyBinding Key="T" Modifiers="Ctrl"  Command="{Binding ShowXmlIntoTreeViewCommand}" />
+            <KeyBinding Key="B"  Modifiers="Ctrl" Command="{Binding ShowXmlIntoBrowserCommand}" />
+            <KeyBinding Key="G"  Modifiers="Ctrl" Command="{Binding GenerateXmlStreamCommand}" />
+
 
         </StackPanel.InputBindings>
 
@@ -43,26 +45,27 @@
                    Background="{StaticResource Brush_ToolBar}">
 
             <Button Name="Delete" Command="{Binding DeleteEntityCommand}"                        
-                    ToolTip="Elimina definitivamente l'oggetto dal database" >
+                    ToolTip="Elimina definitivamente l'oggetto dal database (Tasto scelta rapida F6)" >
                 <Image Source="\GUI\Design\Styles\Images\delete(1).png" Width="25"/>
             </Button>
 
             <Button Name="CreateNew" Command="{Binding Path=AddNewEntity}"
-                    ToolTip="Crea nuovo oggetto"  IsEnabled="{Binding Path=AllowInsertNewEntity}">
+                    ToolTip="Crea nuovo oggetto (Tasto scelta rapida F10 - modalità copia Ctrl + )"  
+                    IsEnabled="{Binding Path=AllowInsertNewEntity}">
 
                 <Image Source="\GUI\Design\Styles\Images\1343547225_file_add.png" Width="25"/>
 
             </Button>
 
             <Button Name="Save" Command="{Binding SaveEntity}"
-                    ToolTip="Salva le modifiche apportate all'oggetto"
+                    ToolTip="Salva le modifiche apportate all'oggetto (Tasto scelta rapida F10)"
                     Width="Auto" IsEnabled="{Binding AllowSave}">
 
                 <Image Source="\GUI\Design\Styles\Images\save(1).png" Width="25"/>
             </Button>
 
             <Button Name="Cancel" Command="{Binding PerformCancel}"                           
-                    ToolTip="Annulla le modifiche apportate"
+                    ToolTip="Annulla le modifiche apportate (Tasto scelta rapida F2)"
                      HorizontalAlignment="Left" IsEnabled="{Binding Path=IsInEditing}">
 
                 <Image Source="\GUI\Design\Styles\Images\cancel.png" Width="25"/>
@@ -76,7 +79,7 @@
                                    IsEnabled="{Binding Path=AllowRecordsNavigation}"/>
 
                 <xctk:SplitButton  x:Name="Search" Margin="5,0,0,0"
-                    ToolTip= "Apre la finestra per la ricerca estesa"
+                    ToolTip= "Apre la finestra per la ricerca estesa (Tasto di scelta rapida Ctrl P)"
                     Command="{Binding Path=Presenter.Search, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"   
                     Width="Auto" HorizontalAlignment="Left">
 
@@ -115,7 +118,7 @@
 
             <Button Name="ViewXmlIntoTreeView" Command="{Binding ShowXmlIntoTreeViewCommand}"
                     Margin="2,0,0,0"
-                    ToolTip="Visualizzazione albero fattura pa" VerticalAlignment="Stretch"
+                    ToolTip="Visualizzazione albero fattura pa (Tasto scelta rapida Ctrl T)" VerticalAlignment="Stretch"
                     IsEnabled="{Binding Path=IsInEditing, Converter={StaticResource InverseBooleanConverter}}">
 
                 <Image Source="\GUI\Design\Styles\Images\Flow Chart-48.png" />
@@ -123,7 +126,7 @@
 
             <Button Name="ViewXmlIntoBrowser" Command="{Binding ShowXmlIntoBrowserCommand}"
                     Margin="2,0,0,0"
-                    ToolTip="Visualizzazione browser fattura pa" VerticalAlignment="Stretch"
+                    ToolTip="Visualizzazione browser fattura PA (Tasto scelta rapida Ctrl B)" VerticalAlignment="Stretch"
                     IsEnabled="{Binding Path=IsInEditing, Converter={StaticResource InverseBooleanConverter}}">
 
                 <Image Source="\GUI\Design\Styles\Images\report-icon.png" />
@@ -131,7 +134,7 @@
 
             <Button Command="{Binding GenerateXmlStreamCommand}"
                     Margin="2,0,0,0"
-                    ToolTip="Generazione file fattura PA sul desktop" 
+                    ToolTip="Generazione file fattura PA sul desktop (Tasto scelta rapida Ctrl G)" 
                     IsEnabled="{Binding Path=IsInEditing, Converter={StaticResource InverseBooleanConverter}}">
 
                 <Image Source="\GUI\Design\Styles\Images\Send File-48.png" Width="25" />
@@ -145,7 +148,7 @@
 
                     <Image Source="{Binding IconXsdValidationState}" Height="Auto"/>
 
-                        <xctk:DropDownButton.DropDownContent >
+                    <xctk:DropDownButton.DropDownContent >
 
                         <Grid  MaxHeight="300" MaxWidth="500" IsEnabled="True" >
                             <Border BorderBrush="CadetBlue" BorderThickness="1" CornerRadius="3" Background="White">
@@ -155,12 +158,11 @@
 
                     </xctk:DropDownButton.DropDownContent>
 
-                    </xctk:DropDownButton>
-
+                </xctk:DropDownButton>
 
             </DockPanel>
 
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom"  Margin="10,0,0,0" Height="20">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom"  Margin="10,0,0,0" Height="20">
                 <TextBlock Text="Fattura Id: "  />
                 <TextBlock Text="{Binding CurrentEntity.Id}"/>
          </StackPanel>
