--- a/FaPA/GUI/Design/Templates/Fattura.xaml
+++ b/FaPA/GUI/Design/Templates/Fattura.xaml
@@ -51,7 +51,7 @@
 
                 <StackPanel Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch">
                     <TextBlock Text="Fornitore" />
-                    <ComboBox   Margin="2,0,2,0" HorizontalAlignment="Stretch" Tag="EnterAsTab" 
+                    <ComboBox   Margin="2,0,2,0" HorizontalAlignment="Stretch" Tag="EnterAsTab" x:Name="Fornitore"
                                 IsEditable="True"
                                 ItemsSource="{Binding  Path=Presenter.Fornitori, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
                                 SelectedItem="{Binding CurrentEntity.AnagraficaCedenteDB, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True}" 
