--- a/FaPA/GUI/Design/Templates/SaveCancelRemoveButtons.xaml
+++ b/FaPA/GUI/Design/Templates/SaveCancelRemoveButtons.xaml
@@ -5,13 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:myRecordNavigator="clr-namespace:FaPA.GUI.Controls.MyRecordNavigator"
              mc:Ignorable="d" >
-    
-    <Grid Margin="2,2,2,2" Background="Gainsboro" x:Name="LayoutRoot" >
 
-        <!--<StackPanel.InputBindings>
-                        <KeyBinding Key="Enter" Modifiers="Ctrl" Command="{Binding EnterKey}" />
-                        <KeyBinding Key="F9"  Command="{Binding SearchOnSite}" />
-                    </StackPanel.InputBindings>-->
+    <UserControl.InputBindings>
+        <KeyBinding Key="Enter" Modifiers="Ctrl" Command="{Binding EnterKey}" />
+        <KeyBinding Key="Add"  Modifiers="Ctrl" Command="{Binding AddCopy}" />
+        <KeyBinding Key="F9" Command="{Binding SearchOnSite}" />
+        <KeyBinding Key="F6" Command="{Binding DeleteEntityCommand}" />
+        <KeyBinding Key="F10" Command="{Binding SaveCommand}" />
+        <KeyBinding Key="F11" Command="{Binding AddItemCommand}" />
+        <KeyBinding Key="F11" Command="{Binding PerformCancelCommand}" />
+    </UserControl.InputBindings>
+
+    <Grid Margin="2,2,2,2" Background="Gainsboro" x:Name="LayoutRoot" >
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -30,7 +35,7 @@
 
         <Button Grid.Column="1" Width="Auto" Height="Auto"  Margin="5,0,0,0" 
                 Command="{Binding AddItemCommand}"
-                ToolTip="Aggiunge una nuova scheda"
+                ToolTip="Aggiunge una nuova scheda (Tasto scelta rapida F11)"
                 Visibility="{Binding AddItemCommand, Converter={StaticResource NullToVisibiltyConverter}}">
 
             <Image Source="\GUI\Design\Styles\Images\1343547225_file_add.png" Width="25"/>
@@ -39,7 +44,7 @@
 
         <Button Grid.Column="2" Width="Auto" Margin="2,0,0,0"
                 Command="{Binding SaveCommand}"
-                ToolTip="Salva la scheda nel database"
+                ToolTip="Salva la scheda nel database (Tasto scelta rapida F10)"
                 Visibility="{Binding SaveCommand, Converter={StaticResource NullToVisibiltyConverter}}">
 
             <Image Source="\GUI\Design\Styles\Images\save(1).png" Width="25"/>
@@ -47,7 +52,7 @@
 
         <Button  Width="Auto" Grid.Column="3" Margin="2,0,0,0"       
                  Command="{Binding PerformCancelCommand}" 
-                 ToolTip="Annulla le modifiche apportate"  
+                 ToolTip="Annulla le modifiche apportate (Tasto scelta rapida F11)"  
                  Visibility="{Binding PerformCancelCommand, Converter={StaticResource NullToVisibiltyConverter}}">
 
             <Image Source="\GUI\Design\Styles\Images\cancel.png" Width="25"/>
@@ -56,7 +61,7 @@
 
         <Button Grid.Column="4" Width="Auto" Height="Auto"  Margin="2,0,0,0" 
                 Command="{Binding DeleteEntityCommand}"
-                ToolTip="Elimina la scheda dal database"
+                ToolTip="Elimina la scheda dal database (Tasto scelta rapida F6)"
                 Visibility="{Binding DeleteEntityCommand, Converter={StaticResource NullToVisibiltyConverter}}">
 
             <Image Source="\GUI\Design\Styles\Images\delete(1).png" Width="25"/>
