--- a/FaPA/GUI/Design/Styles/DataTemplates.xaml
+++ b/FaPA/GUI/Design/Styles/DataTemplates.xaml
@@ -184,7 +184,8 @@
 
                                 <StackPanel Grid.Row="0" Grid.Column="3" Margin="2,0,2,0">
                                     <TextBlock Text="Beneficiario (se diverso)" />
-                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].Beneficiario, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].Beneficiario, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" 
+                                               MaxLength="200"/>
                                 </StackPanel>
 
                                 <StackPanel Grid.Row="1" Grid.Column="0" Margin="2,0,2,0">
@@ -194,7 +195,8 @@
 
                                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="2,0,2,0">
                                     <TextBlock Text="Giorni termini pagamento" />
-                                    <TextBox Text="{Binding CurrentPoco.DettaglioPagamento[0].GiorniTerminiPagamento}"/>
+                                    <TextBox Text="{Binding CurrentPoco.DettaglioPagamento[0].GiorniTerminiPagamento}"
+                                             MaxLength="3"/>
                                 </StackPanel>
 
                                 <StackPanel Grid.Row="1" Grid.Column="2" Margin="2,0,2,0">
@@ -224,52 +226,68 @@
 
                                 <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" Margin="2,0,2,0">
                                     <TextBlock Text="Istituto finanziario" />
-                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].IstitutoFinanziario, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].IstitutoFinanziario, Mode=TwoWay, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch"
+                                               MaxLength="80"/>
                                 </StackPanel>
 
                                 <StackPanel Grid.Row="3" Grid.Column="4" Margin="2,0,2,0">
                                     <TextBlock Text="Cod. Uff. Postale" />
-                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].CodUfficioPostale, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].CodUfficioPostale, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch"
+                                               MaxLength="20"/>
                                 </StackPanel>
 
                                 <StackPanel Grid.Row="4" Grid.Column="0" Margin="2,0,2,0">
                                     <TextBlock Text="Iban" />
-                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].Iban, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].Iban, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" 
+                                               MaxLength="34"/>
                                 </StackPanel>
 
                                 <StackPanel Grid.Row="4" Grid.Column="1" Margin="2,0,2,0">
                                     <TextBlock Text="Abi" />
-                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].Abi, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].Abi, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" 
+                                               MaxLength="5"/>
                                 </StackPanel>
 
                                 <StackPanel Grid.Row="4" Grid.Column="2" Margin="2,0,2,0">
                                     <TextBlock Text="Cab" />
-                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].Cab, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].Cab, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" 
+                                               MaxLength="5"/>
                                 </StackPanel>
 
                                 <StackPanel Grid.Row="4" Grid.Column="3" Margin="2,0,2,0">
                                     <TextBlock Text="Bic" />
-                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].Bic, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].Bic, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" 
+                                               MaxLength="11"/>
                                 </StackPanel>
 
                                 <StackPanel Grid.Row="5" Grid.Column="0" Margin="2,0,2,0">
                                     <TextBlock Text="Cognome quietanzante" />
-                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].CognomeQuietanzante, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].CognomeQuietanzante, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" 
+                                               MaxLength="60"/>
                                 </StackPanel>
 
                                 <StackPanel Grid.Row="5" Grid.Column="1" Margin="2,0,2,0">
                                     <TextBlock Text="Nome quietanzante" />
-                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].NomeQuietanzante, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].NomeQuietanzante, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" 
+                                               MaxLength="60"/>
                                 </StackPanel>
 
                                 <StackPanel Grid.Row="5" Grid.Column="2" Margin="2,0,2,0">
                                     <TextBlock Text="CfQuietanzante" />
-                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].CfQuietanzante, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].CfQuietanzante, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" 
+                                               MaxLength="16"/>
                                 </StackPanel>
 
                                 <StackPanel Grid.Row="5" Grid.Column="3" Margin="2,0,2,0">
                                     <TextBlock Text="Titolo quietanzante" />
-                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].TitoloQuietanzante, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" />
+                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].TitoloQuietanzante, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" 
+                                               MaxLength="10"/>
+                                </StackPanel>
+
+                                <StackPanel Grid.Row="5" Grid.Column="4" Margin="2,0,2,0">
+                                    <TextBlock Text="Codice pagamento" />
+                                    <TextBox   Text="{Binding CurrentPoco.DettaglioPagamento[0].CodicePagamento, UpdateSourceTrigger=LostFocus, ValidatesOnDataErrors=True}" HorizontalAlignment="Stretch" 
+                                               MaxLength="60"/>
                                 </StackPanel>
 
                             </Grid>
